==> yannan9918/STM32-Learning/Smart-Car/hardware/motor.c <==
#include "stm32f10x.h"                  // Device header
#include "PWM.h"

/**
  * 函    数：直流电机初始化
  * 参    数：无
  * 返 回 值：无
  */
void Motor_Init(void)
{
	/*开启时钟*/
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB, ENABLE);		//开启GPIOA的时钟
	
	GPIO_InitTypeDef GPIO_InitStructure;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_0 | GPIO_Pin_1  | GPIO_Pin_12  | GPIO_Pin_13 ;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(GPIOB, &GPIO_InitStructure);						//将PA4和PA5引脚初始化为推挽输出	
	
	PWM_Init();													//初始化直流电机的底层PWM
}

/**
  * 函    数：直流电机设置速度
  * 参    数：Speed 要设置的速度，范围：-100~100
  * 返 回 值：无
  */
void Motor_SetLeftSpeed(int8_t Speed)
{
	if (Speed >= 0)							//如果设置正转的速度值
	{
		GPIO_SetBits(GPIOB, GPIO_Pin_1);	//PA4置高电平
		GPIO_ResetBits(GPIOB, GPIO_Pin_0);	//PA5置低电平，设置方向为正转
//		GPIO_SetBits(GPIOB, GPIO_Pin_13);	//PA4置高电平
//		GPIO_ResetBits(GPIOB, GPIO_Pin_12);	//PA5置低电平，设置方向为正转
		PWM_SetCompare1(Speed);				//PWM设置为速度值
		PWM_SetCompare4(Speed);	
	}
	else									//否则，即设置反转的速度值
	{
		GPIO_ResetBits(GPIOB, GPIO_Pin_1);	//PA4置低电平
		GPIO_SetBits(GPIOB, GPIO_Pin_0);	//PA5置高电平，设置方向为反转
//		GPIO_ResetBits(GPIOB, GPIO_Pin_13);	//PA4置低电平
//		GPIO_SetBits(GPIOB, GPIO_Pin_12);	//PA5置高电平，设置方向为反转
		PWM_SetCompare1(-Speed);			//PWM设置为负的速度值，因为此时速度值为负数，而PWM只能给正数
		PWM_SetCompare4(-Speed);
	}
}

void Motor_SetRightSpeed(int8_t Speed)
{
	if (Speed >= 0)							//如果设置正转的速度值
	{
//		GPIO_SetBits(GPIOB, GPIO_Pin_0);	//PA4置高电平
//		GPIO_ResetBits(GPIOB, GPIO_Pin_1);	//PA5置低电平，设置方向为正转
		GPIO_SetBits(GPIOB, GPIO_Pin_13);	//PA4置高电平
		GPIO_ResetBits(GPIOB, GPIO_Pin_12);	//PA5置低电平，设置方向为正转
		PWM_SetCompare1(Speed);				//PWM设置为速度值
		PWM_SetCompare4(Speed);	
	}
	else									//否则，即设置反转的速度值
	{
//		GPIO_ResetBits(GPIOB, GPIO_Pin_0);	//PA4置低电平
//		GPIO_SetBits(GPIOB, GPIO_Pin_1);	//PA5置高电平，设置方向为反转
		GPIO_ResetBits(GPIOB, GPIO_Pin_13);	//PA4置低电平
		GPIO_SetBits(GPIOB, GPIO_Pin_12);	//PA5置高电平，设置方向为反转
		PWM_SetCompare1(-Speed);			//PWM设置为负的速度值，因为此时速度值为负数，而PWM只能给正数
		PWM_SetCompare4(-Speed);
	}
}
